--- a/마크다운 활용법.md
+++ b/마크다운 활용법.md
@@ -130,3 +130,71 @@ $ git config --global user.email {이메일}
 
 ### 1. 저장소 생성
 
+```
+$ git inint
+Initialized empty Git repository in c:/Users/student폴더/.git/
+(master)$
+```
+
+### 2. add
+
+>커밋 대상 파일을 `staging area` 로 이동시킨다.
+>
+>즉, 이력을 남길 파일을 담아 놓는 것이다.
+
+#### `.`은 현재 디렉토리(폴더)를 뜻한다.
+
+```
+$ git add .			# 현재 디렉토리 모두 stage
+$ git add git.md   # 특정 파일만 stage
+$ git add images/	# 특정 폴더만 stage
+```
+
+항상 `git status` 명령어를 통해 상태를 확인하자.
+
+### 3. commit
+
+> git 에서 이력을 남기기 위해서는 커밋을 진행
+
+```
+$ git commit -m 'Git 기초'
+[master 4047137] Git 기초
+ 1 file changed, 0 insertions(+), 0 deletions(-)
+ create mode 100644 images/naver_com_20150908_153438.jpg
+```
+
+
+
+### Git 원격 저장소 활용하기
+
+### 0. 기본 설정
+
+> 원격 저장소를 생성한다.(예 -github)
+
+### 1. 원격 저장소 등록
+
+`origin`이라는 이름으로 해당 url을 원격 저장소로 등록
+
+최초에 한번만 하면 된다.
+
+```
+$ git remote add origin https://github.com/jongmin6794/TIL.git
+```
+
+```
+$ git remote -v # 원격 저장소 목록
+origin  https://github.com/jongmin6794/TIL.git (fetch)
+origin  https://github.com/jongmin6794/TIL.git (push)
+```
+
+
+
+## 2. 원격 저장소 push
+
+앞으로 변경디는 사항이있으면 항상 `add, commit, push` 를 진행한다.
+
+```
+$ git push -u origin master
+Everything up-to-date
+Branch 'master' set up to track remote branch 'master' from 'origin'.
+```
