--- a/Day6.ipynb
+++ b/Day6.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -647,10 +647,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Life is too short\\n', 'you need python']\n",
+      "['Life is too short\\n', 'you need java']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#문제1 txt 파일 안의 일정 문자 고쳐 저장\n",
+    "f=open(\"C:/Users/student/Downloads/Python_JP/test.txt\",\"r\")\n",
+    "lines=f.readlines()\n",
+    "print(lines)\n",
+    "for i in range(0,2):\n",
+    "    if 'java' in lines[i]:\n",
+    "        lines[i]=lines[i].replace(\"java\",\"python\")\n",
+    "    else:#실행할때마다 바꿔주기,매번 txt고쳐주기 귀찮...\n",
+    "        lines[i]=lines[i].replace(\"python\",\"java\")\n",
+    "print(lines)\n",
+    "f.close()\n",
+    "f=open(\"C:/Users/student/Downloads/Python_JP/test.txt\",\"w\")\n",
+    "for i in range(0,2):\n",
+    "    f.write(lines[i])\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hgaophgapowehgapoghag\n"
+     ]
+    }
+   ],
+   "source": [
+    "#문제2 사용자가 입력한대로 파일 저장\n",
+    "\n",
+    "f=open(\"c:/da/test.txt\",\"a\")\n",
+    "data=input()\n",
+    "data=data+\"\\n\"\n",
+    "f.write(data)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#문제3\n",
+    "class Calculator:\n",
+    "    def __init__(self):\n",
+    "        self.value=0\n",
+    "    def add(self,val):\n",
+    "        self.value+=val\n",
+    "        \n",
+    "class UpgradeCalculator(Calculator):\n",
+    "    def minus(self,val):\n",
+    "        self.value-=val\n",
+    "    def value(self):\n",
+    "        return self\n",
+    "cal=UpgradeCalculator()\n",
+    "cal.add(10)\n",
+    "cal.minus(7)\n",
+    "print(cal.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#문제4"
+   ]
   }
  ],
  "metadata": {
