--- a/Day9.ipynb
+++ b/Day9.ipynb
@@ -834,14 +834,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['S', 'e', 'o'], ['D', 'a', 'e'], ['K', 'w', 'a'], ['J', 'e', 'j']]\n"
+      "['Seo', 'Dae', 'Kwa', 'Jej']\n"
      ]
     }
    ],
@@ -850,14 +850,73 @@
     "alist=['Seoul', 'Daegu', 'Kwangju', 'Jeju']\n",
     "def three_list(nonamelist):\n",
     "    blist=[]\n",
+    "    clist=[]\n",
     "    for i in range(0,len(alist)):\n",
     "        blist.append([])\n",
     "        for j in range(0,3):\n",
     "            blist[i].append(alist[i][j])\n",
-    "        \"\".join(blist[i])\n",
-    "    return blist\n",
+    "        clist.append(\"\".join(blist[i]))\n",
+    "    return clist\n",
     "print(three_list(alist))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 0, 4, 0, 2, 2, 3, 5, 0, 3]\n",
+      "baby-gin 성공\n"
+     ]
+    }
+   ],
+   "source": [
+    "#보너스문제\n",
+    "import random\n",
+    "listR=[]\n",
+    "for i in range(0,10):\n",
+    "    rand=random.choice([0,1,2,3,4,5,6,7,8,9])\n",
+    "    listR.append(rand)\n",
+    "print(listR)\n",
+    "def countSelect(listR):\n",
+    "    listC=[0,0,0,0,0,0,0,0,0,0]\n",
+    "    for i in range(0,10):\n",
+    "        listC[listR[i]]+=1\n",
+    "#    print(listC)\n",
+    "    return listC\n",
+    "def findBayginG(listC):\n",
+    "    countT=0\n",
+    "    countR=0\n",
+    "    total=0\n",
+    "    listCC=listC\n",
+    "    for i in range(0,10):\n",
+    "        if listCC[i]>=3:\n",
+    "            countT+=1\n",
+    "            listCC[i]=listCC[i]-3\n",
+    "    for i in range(0,8):\n",
+    "        if listCC[i]>=1 and listCC[i+1]>=1 and listCC[i+2]:\n",
+    "            countR+=1\n",
+    "            listCC[i]-=1\n",
+    "            listCC[i+1]-=1\n",
+    "            listCC[i+2]-=1\n",
+    "    total=countT+countR\n",
+    "    return total\n",
+    "if findBayginG(countSelect(listR))>=2:\n",
+    "    print(\"baby-gin 성공\")\n",
+    "else:\n",
+    "    print(\"baby-gin X\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
