--- a/Day9.ipynb
+++ b/Day9.ipynb
@@ -862,14 +862,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4, 0, 4, 0, 2, 2, 3, 5, 0, 3]\n",
+      "[5, 9, 3, 6, 4, 8, 3, 2, 4, 6]\n",
+      "( 2 , 3 , 4 )( 3 , 4 , 5 )\n",
       "baby-gin 성공\n"
      ]
     }
@@ -896,6 +897,7 @@
     "    for i in range(0,10):\n",
     "        if listCC[i]>=3:\n",
     "            countT+=1\n",
+    "            print(\"(\",i,\",\",i,\",\",i,\")\",end=\"\")\n",
     "            listCC[i]=listCC[i]-3\n",
     "    for i in range(0,8):\n",
     "        if listCC[i]>=1 and listCC[i+1]>=1 and listCC[i+2]:\n",
@@ -903,20 +905,33 @@
     "            listCC[i]-=1\n",
     "            listCC[i+1]-=1\n",
     "            listCC[i+2]-=1\n",
+    "            print(\"(\",i,\",\",i+1,\",\",i+2,\")\",end=\"\")\n",
     "    total=countT+countR\n",
     "    return total\n",
     "if findBayginG(countSelect(listR))>=2:\n",
-    "    print(\"baby-gin 성공\")\n",
+    "    print(\"\\nbaby-gin 성공\")\n",
     "else:\n",
     "    print(\"baby-gin X\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bcdefa\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 'abcdef' # ?? 이게 되?? ㄷㄷ;; 파이썬 개사기;;\n",
+    "x = x[1:] + x[0]\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "code",
