--- a/Day10.ipynb
+++ b/Day10.ipynb
@@ -665,7 +665,7 @@
    ],
    "source": [
     "#문제4\n",
-    "import glob\n",
+    "import glob #디렉토리 안에 파일과 폴더 보여줌\n",
     "location=input()\n",
     "listR=glob.glob(location+\"/*\")\n",
     "print(listR)\n",
@@ -697,7 +697,7 @@
     "soup=BeautifulSoup(res,\"html.parser\")\n",
     "p=soup.select_one(\"#mw-content-text > div > ul:nth-child(71)\").text\n",
     "import re\n",
-    "pat=re.findall(\"[1-2]+[0-9]+[0-9]+[0-9]+년+\\s+[1-9]*[0-9]+월+\\s[1-9]*[0-9]+일\",p)\n",
+    "pat=re.findall(\"[1-2]+[0-9]+[0-9]+[0-9]+년+\\s+[1-9]*[~]*[0-9]*월+\\s*[1-9]*[0-9]+일\",p)\n",
     "#print(p)\n",
     "print(pat)"
    ]
