--- a/HDay30_MiniP04.ipynb
+++ b/HDay30_MiniP04.ipynb
@@ -8694,7 +8694,7 @@
     "userRating=useData[num]\n",
     "userRatingPure=useData.copy()\n",
     "\n",
-    "del useData[num]\n",
+    "del useData[num]#본인 데이터 삭제... 겹치는거 비교해야하는데 당연 max는 본인이므로\n",
     "useData\n",
     "userCount=np.sum(useData.notnull(),axis=0)\n",
     "maxcount=userCount.max()#\n",
