--- a/백준 14891.ipynb
+++ b/백준 14891.ipynb
@@ -97,6 +97,7 @@
     }
    ],
    "source": [
+    "import copy\n",
     "arr=[input()for i in range(4)]\n",
     "K=int(input())\n",
     "\n",
@@ -129,6 +130,7 @@
     "            return\n",
     "    direct = 0\n",
     "\n",
+    "print(arr)\n",
     "for o in range(K):\n",
     "    N, D = map(int, input().split())\n",
     "    N = N - 1\n",
@@ -137,26 +139,26 @@
     "        arr[N] = arr[N][-1] + arr[N][:-1]\n",
     "    if D==-1:\n",
     "        arr[N] = arr[N][1:] + arr[N][0]\n",
-    "        \n",
+    "\n",
     "    if N == 0:\n",
     "        for i in range(0, 3):\n",
     "            ### 아래로만(톱니 우측만)\n",
     "            if direct == 0:\n",
     "                break\n",
     "            if direct == 1:\n",
-    "                rotationDown(arr, 1, N)\n",
+    "                rotationDown(arr, 1, i)\n",
     "            if direct == -1:\n",
-    "                rotationDown(arr, -1, N)\n",
+    "                rotationDown(arr, -1, i)\n",
     "    if N == 3:\n",
     "        for i in range(3, 0, -1):\n",
     "            ### 위로만(톱니 좌측만)\n",
     "            if direct == 0:\n",
     "                break\n",
     "            if direct == 1:\n",
-    "                rotationUp(arr, 1, N)\n",
+    "                rotationUp(arr, 1, i)\n",
     "            if direct == -1:\n",
-    "                rotationUp(arr, -1, N)\n",
-    "    else:\n",
+    "                rotationUp(arr, -1, i)\n",
+    "    if N== 1 or N==2:\n",
     "        for i in range(N, 0, -1):\n",
     "            ## 위로(톱니 좌측)\n",
     "            if direct == 0:\n",
@@ -165,6 +167,7 @@
     "                rotationUp(arr, 1, N)\n",
     "            if direct == -1:\n",
     "                rotationUp(arr, -1, N)\n",
+    "        direct=D\n",
     "        for i in range(N, 3):\n",
     "            ## 아래로(톱니 우측)\n",
     "            if direct == 0:\n",
@@ -173,6 +176,7 @@
     "                rotationDown(arr, 1, N)\n",
     "            if direct == -1:\n",
     "                rotationDown(arr, -1, N)\n",
+    "    print(arr)\n",
     "\n",
     "if arr[0][0]=='1':\n",
     "    result+=1\n",
@@ -182,7 +186,8 @@
     "    result+=4\n",
     "if arr[3][0]=='1':\n",
     "    result+=8\n",
-    "print(arr,result)"
+    "print(arr,result)\n",
+    "\n"
    ]
   },
   {
