--- a/백준 14503 로봇청소기.ipynb
+++ b/백준 14503 로봇청소기.ipynb
@@ -45,104 +45,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 1, 1], [1, 0, 1], [1, 1, 1]]\n"
-     ]
-    },
-    {
-     "ename": "RecursionError",
-     "evalue": "maximum recursion depth exceeded in comparison",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-c201daf410e0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     65\u001b[0m     \u001b[0mRobot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 67\u001b[1;33m \u001b[0mRobot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     68\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mN\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     69\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mM\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-14-c201daf410e0>\u001b[0m in \u001b[0;36mRobot\u001b[1;34m(r, c, d)\u001b[0m\n\u001b[0;32m     63\u001b[0m                 \u001b[0mr\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m                 \u001b[0marr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m     \u001b[0mRobot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[0mRobot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "... last 1 frames repeated, from the frame below ...\n",
-      "\u001b[1;32m<ipython-input-14-c201daf410e0>\u001b[0m in \u001b[0;36mRobot\u001b[1;34m(r, c, d)\u001b[0m\n\u001b[0;32m     63\u001b[0m                 \u001b[0mr\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m                 \u001b[0marr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m     \u001b[0mRobot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[0mRobot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRecursionError\u001b[0m: maximum recursion depth exceeded in comparison"
+      "1\n"
      ]
     }
    ],
    "source": [
-    "# 구역 검사 -> 방향 이동 -> 청소 -> 구역 검사\n",
-    "# dx,dy=[-1,0,1,0],[0,1,0,-1]\n",
-    "count=0\n",
-    "print(arr)\n",
-    "def Robot(r,c,d):\n",
-    "    cnt=0\n",
+    "count = 0\n",
+    "cnt=0\n",
+    "# print(arr)\n",
+    "def Robot(r, c, d):\n",
+    "    global cnt\n",
     "    arr[r][c]=2\n",
-    "    if cnt==4:\n",
-    "        if d==0:\n",
-    "            if arr[r+1][c]==1:\n",
+    "    if cnt == 4:\n",
+    "        if d == 0:\n",
+    "            if arr[r + 1][c] == 1:\n",
     "                return\n",
     "            else:\n",
-    "                r=r+1\n",
-    "        elif d==1:\n",
-    "            if arr[r][c-1]==1:\n",
+    "                r = r + 1\n",
+    "                cnt=0\n",
+    "        elif d == 1:\n",
+    "            if arr[r][c - 1] == 1:\n",
     "                return\n",
     "            else:\n",
-    "                c=c-1\n",
-    "        elif d==2:\n",
-    "            if arr[r-1][c]==1:\n",
+    "                c = c - 1\n",
+    "                cnt = 0\n",
+    "        elif d == 2:\n",
+    "            if arr[r - 1][c] == 1:\n",
     "                return\n",
     "            else:\n",
-    "                r=r-1\n",
-    "        elif d==3:\n",
-    "            if arr[r][c+1]==1:\n",
+    "                r = r - 1\n",
+    "                cnt = 0\n",
+    "        elif d == 3:\n",
+    "            if arr[r][c + 1] == 1:\n",
     "                return\n",
     "            else:\n",
-    "                c=c+1\n",
-    "    elif d==0:\n",
-    "        if c-1>=0:\n",
-    "            d=3\n",
-    "            if arr[r][c-1]!=0:#막힘 or 청소함\n",
-    "                cnt+=1\n",
+    "                c = c + 1\n",
+    "                cnt = 0\n",
+    "    if d == 0:\n",
+    "        if c - 1 >= 0:\n",
+    "            d = 3\n",
+    "            if arr[r][c - 1] != 0:  # 막힘 or 청소함\n",
+    "                cnt += 1\n",
     "            else:\n",
-    "                #이동 후 청소\n",
-    "                c=c-1\n",
-    "                arr[r][c]=2\n",
-    "    elif d==1:\n",
-    "        if r-1>=0:\n",
-    "            d=0\n",
-    "            if arr[r-1][c]!=0:\n",
-    "                cnt+=1\n",
+    "                # 이동\n",
+    "                c = c - 1\n",
+    "                cnt = 0\n",
+    "    elif d == 1:\n",
+    "        if r - 1 >= 0:\n",
+    "            d = 0\n",
+    "            if arr[r - 1][c] != 0:\n",
+    "                cnt += 1\n",
     "            else:\n",
-    "                #이동 후 청소\n",
-    "                r=r-1\n",
-    "                arr[r][c]=2\n",
-    "    elif d==2:\n",
-    "        if c+1<=M:\n",
-    "            d=1\n",
-    "            if arr[r][c+1]!=0:\n",
-    "                cnt+=1\n",
+    "                # 이동\n",
+    "                r = r - 1\n",
+    "                cnt = 0\n",
+    "    elif d == 2:\n",
+    "        if c + 1 <= M:\n",
+    "            d = 1\n",
+    "            if arr[r][c + 1] != 0:\n",
+    "                cnt += 1\n",
     "            else:\n",
-    "                #이동 후 청소\n",
-    "                c=c+1\n",
-    "                arr[r][c]=2\n",
-    "    elif d==3:\n",
-    "        if r+1<=N:\n",
-    "            d=2\n",
-    "            if arr[r+1][c]!=0:\n",
-    "                cnt+=1\n",
+    "                # 이동\n",
+    "                c = c + 1\n",
+    "                cnt = 0\n",
+    "    elif d == 3:\n",
+    "        if r + 1 <= N:\n",
+    "            d = 2\n",
+    "            if arr[r + 1][c] != 0:\n",
+    "                cnt += 1\n",
     "            else:\n",
-    "                #이동 후 청소\n",
-    "                r=r+1\n",
-    "                arr[r][c]=2\n",
-    "    Robot(r,c,d)\n",
-    "    \n",
-    "Robot(r,c,d)\n",
+    "                # 이동\n",
+    "                r = r + 1\n",
+    "                cnt = 0\n",
+    "    # print(cnt)\n",
+    "    # print(r,c,d)\n",
+    "    Robot(r, c, d)\n",
+    "\n",
+    "Robot(r, c, d)\n",
     "for i in range(N):\n",
     "    for j in range(M):\n",
-    "        if arr[i][j]==2:\n",
-    "            count+=1\n",
-    "print(arr)\n",
+    "        if arr[i][j] == 2:\n",
+    "            count += 1\n",
+    "# print(arr)\n",
     "print(count)"
    ]
   },
